303 ==> 436913 - File name timestamp not valid year 1892.
304 ==> 381967 - Some lens metadata lost in converting CR2 into DNG.
305 ==> 436946 - Settings not permanent.
306 ==> 436977 - Field "Options" too small.
307 ==> 436979 - Empty regions.
308 ==> 435085 - Some DNG files created with Adobe DNG Converter cause program to abort - Update to DNG SDK 1.5.
309 ==> 437038 - Unmark this face as Ignored - pressing will cause the ignored picture frame to disappear.
310 ==> 436795 - Database from uninstalled version of digiKam is unhelpfully persistant.
311 ==> 424679 - Windows installer erroneously requires accepting the GPL.
312 ==> 436532 - digiKam translation of "Behavior" not possible.
313 ==> 403267 - digiKam is not reading tags from DNG images when sidecars are present.
314 ==> 437072 - digiKam does not start.
315 ==> 426791 - Unable to change database location via GUI.
316 ==> 437175 - Use media file timestamp when creating sidecar.
317 ==> 437103 - BadRequest when exporting to Onedrive.
318 ==> 437209 - Menu bar and toolbar backgrounds don't respect selected digiKam colorscheme (and instead inherit from global colorscheme).
319 ==> 431689 - Nokia 9 PureView DNG image demosaicing preview corruption.
320 ==> 437461 - Tag panel from left side-bar has people items unsorted.
321 ==> 252763 - Align album titles next to album thumbnails.
322 ==> 436671 - Similarity-Duplicates the active menu tab always moves to the first tab, no location memory.
323 ==> 437534 - Grouped items are not visible in the Table view when the View / Show All Grouped Items As Open menu is selected.
324 ==> 377632 - Problem with open grouped files.
325 ==> 437548 - In Table view Del removes Group Selected and second item to the trash.
326 ==> 431497 - Unconfiremd Faces Counter has an Offset.
327 ==> 437554 - Export to local Storage : Add an export with direct extension of the files in jpg (Not jpeg).
328 ==> 436695 - [opensuse 15.2] unable to resize images (all types).
329 ==> 