@@ -58,6 +58,7 @@ public:
     }
 
     const static QString TARGET_URL_PROPERTY;
+    const static QString TARGET_ALBUMPATH;
     const static QString TARGET_OVERWRITE;
     const static QString TARGET_BEHAVIOR;
     const static QString CONFIG_GROUP;
@@ -73,6 +74,7 @@ public:
 };
 
 const QString FCExportWindow::Private::TARGET_URL_PROPERTY     = QLatin1String("targetUrl");
+const QString FCExportWindow::Private::TARGET_ALBUMPATH        = QLatin1String("albumPath");
 const QString FCExportWindow::Private::TARGET_OVERWRITE        = QLatin1String("overwrite");
 const QString FCExportWindow::Private::TARGET_BEHAVIOR         = QLatin1String("targetBehavior");
 const QString FCExportWindow::Private::CONFIG_GROUP            = QLatin1String("FileCopyExport");
@@ -156,6 +158,7 @@ void FCExportWindow::restoreSettings()
     settings.imageFormat           = group.readEntry(d->IMAGE_FORMAT,            (int)FCContainer::JPEG);
     settings.imageResize           = group.readEntry(d->IMAGE_RESIZE,            1024);
     settings.imageCompression      = group.readEntry(d->IMAGE_COMPRESSION,       75);
+    settings.albumPath             = group.readEntry(d->TARGET_ALBUMPATH,        false);
     settings.overwrite             = group.readEntry(d->TARGET_OVERWRITE,        false);
     settings.removeMetadata        = group.readEntry(d->REMOVE_METADATA,         false);
     settings.changeImageProperties = group.readEntry(d->CHANGE_IMAGE_PROPERTIES, false);
@@ -174,6 +177,7 @@ void FCExportWindow::saveSettings()
     group.writeEntry(d->IMAGE_FORMAT,            settings.imageFormat);
     group.writeEntry(d->IMAGE_RESIZE,            settings.imageResize);
     group.writeEntry(d->IMAGE_COMPRESSION,       settings.imageCompression);
+    group.writeEntry(d->TARGET_ALBUMPATH,        settings.albumPath);
     group.writeEntry(d->TARGET_OVERWRITE,        settings.overwrite);
     group.writeEntry(d->REMOVE_METADATA,         settings.removeMetadata);
     group.writeEntry(d->CHANGE_IMAGE_PROPERTIES, settings.changeImageProperties);
